18 Jul 2004 mipsator
 * clean up the code before starting to play with parse_data().
 * fixed getopt() call in pmkscan.

13 Jul 2004 mipsator
 * misc fixes and cleanup for experimental parsing engine.

12 Jul 2004 mipsator
 * imported experimental parser engine.
 * synced parser test.

11 Jul 2004 mipsator
 * fixed compatibility headers.

28 Jun 2004 mipsator
 * added variable substitution in pmkscan.
 * cleaned-up Makefile.pmk (obsolete tests).

27 Jun 2004 mipsator
 * added more stuff to prepare changes in pmkscan.

26 Jun 2004 mipsator
 * moved process_string() and single_append() into hash_tools.
 * updated pmkfile (was using obsolete commands).

16 Jun 2004 mipsator
 * fixed parse_pc_file().
 * fixed process_variables().
 * misc. changes.

22 May 2004 mipsator
 * hunted some more XXX ...

16 May 2004 mipsator
 * fixed some XXX remaining in parse.c and pmkinstall.c.

11 May 2004 mipsator
 * fixed samples to run properly.
 * added missing error messages.
 * added misc defines for LIBS and CFLAGS.

# snapshot 0.8.1-s1

02 May 2004 mipsator
 * fixed a bug recently introduced in CHECK_PKG_CONFIG.

24 Apr 2004 mipsator
 * more stuff related to the pmksetup engine changes.

15 Apr 2004 mipsator
 * added new engine for pmksetup. Some minor changes are still remaining
   but pmksetup is working fine.

01 Apr 2004 mipsator
 * imported skeleton of pmkshgen.
 * fixed use of parse_clopt's value in pmk and pmksetup.
 * booleanification of pmksetup.	
 * added handling functions for prsopt structures.

# PMK 0.8.1 release

14 Mar 2004 mipsator
 * modified a bit the version string format.

29 Feb 2004 mipsator
 * added failsafe checks in dynarray functions, based on a patch from
   Marek Habersack.
 * fixed pkgcell_destroy() to call free() only when needed, based on a
   patch from Marek Habersack.
 * added MODULE option to CHECK_CONFIG command.

25 Feb 2004 mipsator
 * moved tests for pmkscan and pmkinstall.
 * fixed pmkc against segfault when .pc doesn't exists or empty