@@ -155,6 +155,7 @@ prsopt	*prsopt_init_adv(char *, char, char *);
 void	 prsopt_destroy(prsopt *);
 bool	 prs_get_line(FILE *, char *, size_t);
 bool	 prs_fill_buf(prseng *);
+bool	 prs_fill_buf_by_line(prseng *);
 htable	*keyword_hash(prskw [], int);
 char	*skip_blank(char *pstr);
 void	 skip_useless(prseng *);
@@ -167,8 +168,7 @@ char	*parse_key(char *, pmkobj *, size_t);
 char	*parse_data(char *, pmkobj *, size_t);
 prscell	*parse_cell(char *, htable *);
 prscell	*parse_cmd_header(prseng *peng, prsnode *pnode);
-bool	 parse_opt(char *, prsopt *, char *);
-bool	 parse_opt_new(prseng *, prsopt *, char *);
+bool	 parse_opt(prseng *, prsopt *, char *);
 bool	 parse_clopt(char *, prsopt *, char *);
 bool	 parse_node(prsdata *, prseng *peng, prscell *);
 bool	 parse_command(prsdata *, prseng *peng, prscell *);
